Snapshot 944c5280b4

* #4585: Watch activity unique names on D-Bus for disappearences, implying
  the activity crashed; this time, treat that as the local user leaving,
  not as the activity disappearing! (smcv)
* #4659: Revert part of #4585 fix (this part didn't make sense anyway)
  to fix inability to join activities (smcv)
* #4661: don't break the debug log if names are non-ASCII (smcv)

Snapshot 0d8c69c14b

* #4585: Watch activity unique names on D-Bus for disappearances implying
  the activity crashed (morgs)

Snapshot 1effa5a10d

Snapshot f2411a6161

* #2412: improve our ability to cope with disconnections and CM crashes (morgs)

Snapshot 11d8103108

* #4537: actually set registered = True (again) (smcv)

Snapshot 25577b1486

* #4027: associate activity debug messages with the relevant activity (smcv)

Snapshot 439e31672b

* Emit BuddyHandleJoined with Buddy and handle so sugar.presence can
  track handles without calling PS (morgs)
* Create Tubes Channel during join process (morgs)

Snapshot 6d79687f8b

* #3683: don't use (potentially long) user-supplied nickname in mDNS instance
  names, this can break Salut activity advertisement (smcv)
* #3422: don't emit spurious CurrentActivityChanged signal when changing from
  no current activity to no current activity (smcv)
* #3465: don't keep invite-only activities in the mesh view after we leave
  them (smcv)

Snapshot 6df1f3eca5

* #3506: LL and server plugins are mutually exclusive for trial-3 (dcbw)

Snapshot 46898a3e00

* Adapt to sugar API change (marco)

Snapshot b8d04713ac

* #3380: de-restrict invitations so non-initiator can invite people to an
  activity (only effective if you also have Gabble trial3a 20070912 snapshot)
  (smcv)
* #3369: avoid Gabble invite-only activities disappearing from the
  mesh view when we join them (smcv)
* #3370: fix error reporting in logs by working around dbus-python bug#12403
  (smcv)

Snapshot bff163d57b

* #3328: when we join an activity on Salut, don't stop it from being